[tool.poetry]
name = "project-flota"
version = "0.1.0"
description = ""
authors = ["Kamil Kubiak <kubiak.kamil23@gmail.com>"]
readme = "README.md"
packages = [{include = "project_flota"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.95.1"
uvicorn = "^0.22.0"


[tool.poetry.group.dev.dependencies]
mypy = "^1.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
